<resources>
    <string name="app_name">projekat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="email_hint">Your Email Adress</string>
    <string name="password_hint">Your Password</string>
    <string name="login_button_text">Sign in</string>
    <string name="register_text">Don\'t have an account?</string>
    <string name="register_here_text">Sign up</string>
    <string name="login_title">Sign in to Your Account</string>
    <string name="register_title">Sign Up for Free</string>
    <string name="register_button_text">Sign Up</string>
    <string name="login_text">Already have an account?</string>
    <string name="login_here_text">Sign in</string>
    <string name="login_forget_password_text">Forget Password</string>
    <string name="login_methods_text">od Sign in with</string>
    <string name="register_methods_text">od Sign up with</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="facebook_signin_desc">facebook_signin_desc</string>
    <string name="google_signin_desc">google_signin_desc</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add article</string>
    <string name="title_messages">Messages</string>
    <string name="title_user">User</string>
    <string name="naziv_artikla">Naziv Artikla</string>
    <string name="opis_artikla">Opis artikla</string>
    <string name="cijena_artikla">Cijena artikla</string>
    <string name="dodaj_artikal">Dodaj artikal</string>
    <string name="pocetna">POČETNA</string>
    <string name="title_pretraga">Pretraga</string>
    <string name="fragment_pretraga">PRETRAGA</string>
    <string name="logout">Logout</string>

</resources>