<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">


        <TextView
            android:id="@+id/loginTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login_title"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/loginTitleText"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldUsername"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto"
            android:text="Remember Me"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="Forgot Password"
            android:fontFamily="@font/roboto"
            android:textColor="#1976D1"
            app:layout_constraintBottom_toBottomOf="@+id/rememberMeCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rememberMeCheckBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/rememberMeCheckBox"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="15dp"
            android:backgroundTint="#1976D1"
            android:fontFamily="@font/roboto"
            app:cornerRadius="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            />

        <TextView
            android:id="@+id/signinWithText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_methods_text"
            android:textColor="#B1B1B1"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="467dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/signinWithText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="110dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="15dp">

            <ImageButton
                android:id="@+id/googleSignInButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/google_icon_test"
                 />
        </androidx.cardview.widget.CardView>

        <!-- Facebook Sign In Button -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/signinWithText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="110dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="15dp">

            <ImageButton
                android:id="@+id/facebookSignInButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/facebook_icon"
                 />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:layout_marginBottom="25dp"
            android:textColor="#1976D1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
